--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "formik": "^1.5.0",
     "npm": "^6.7.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "styled-components": "^4.1.3"
+    "react-star-ratings": "^2.3.0",
+    "styled-components": "^4.1.3",
+    "underscore": "^1.9.1",
+    "unstated": "^2.1.1",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
