--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.30.1",
     "formik": "^1.5.0",
     "npm": "^6.7.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-router-dom": "^4.3.1",
+    "react-icons": "^3.4.0",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.5",
     "react-star-ratings": "^2.3.0",
     "styled-components": "^4.1.3",
