--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-icons": "^3.4.0",
+    "react-loading-components": "^1.1.12",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.5",
     "react-star-ratings": "^2.3.0",
