--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.1",
     "react-icons": "^3.4.0",
     "react-loading-components": "^1.1.12",
+    "react-provide-scroll-position": "^1.0.2",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.5",
     "react-star-ratings": "^2.3.0",
