--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "date-fns": "^1.30.1",
     "formik": "^1.5.0",
+    "history": "^4.7.2",
     "npm": "^6.7.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-icons": "^3.4.0",
     "react-loading-components": "^1.1.12",
+    "react-on-screen": "^2.1.1",
     "react-provide-scroll-position": "^1.0.2",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.5",
+    "react-scroll-into-view": "^1.5.0",
     "react-star-ratings": "^2.3.0",
     "styled-components": "^4.1.3",
     "underscore": "^1.9.1",
