--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^4.1.3",
     "underscore": "^1.9.1",
     "unstated": "^2.1.1",
+    "unstated-debug": "^0.3.2",
     "yup": "^0.26.10"
   },
   "scripts": {
