--- a/client/package.json
+++ b/client/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
-    "apollo-link": "^1.2.9",
-    "apollo-link-error": "^1.1.8",
-    "apollo-link-http": "^1.5.12",
+    "apollo-boost": "^0.3.1",
     "date-fns": "^1.30.1",
     "formik": "^1.5.1",
     "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.5",
     "react-apollo": "^2.5.2",
+    "react-apollo-hooks": "^0.4.3",
+    "react-dom": "^16.8.4",
     "react-icons": "^3.4.0",
     "react-loading-components": "^1.1.12",
     "react-router-dom": "4.3.1",
+    "react-router-last-location": "^2.0.0-beta.1",
+    "react-scripts": "2.1.5",
     "react-scroll-into-view": "^1.5.0",
+    "react-snap": "^1.23.0",
     "react-star-ratings": "^2.3.0",
     "styled-components": "^4.1.3",
-    "underscore": "^1.9.1",
     "unstated": "^2.1.1",
     "unstated-debug": "^0.3.2",
     "yup": "^0.26.10"
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
