--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "concurrently": "^4.1.0"
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.9",
+    "apollo-link-context": "^1.0.15",
+    "apollo-link-error": "^1.1.8",
+    "apollo-link-http": "^1.5.12",
+    "concurrently": "^4.1.0",
+    "graphql": "^14.1.1"
   },
   "devDependencies": {},
   "scripts": {
