--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.8.4",
     "react-icons": "^3.4.0",
     "react-loading-components": "^1.1.12",
+    "react-media": "^1.9.2",
     "react-router-dom": "4.3.1",
     "react-router-last-location": "^2.0.0-beta.1",
     "react-scripts": "2.1.5",
