--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
     "nodemon": "nodemon"
   },
   "dependencies": {
+    "apollo-server": "^2.4.8",
     "bcryptjs": "2.4.3",
-    "graphql-yoga": "1.17.4",
+    "graphql-import": "^0.7.1",
     "jsonwebtoken": "8.5.0",
     "prisma-client-lib": "1.28.0"
   },
