--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
+    "react-card-flip": "^0.5.0",
     "react-dom": "^16.8.4",
     "react-icons": "^3.4.0",
     "react-loading-components": "^1.1.12",
