--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   prisma:
-    image: prismagraphql/prisma:1.28
+    image: prismagraphql/prisma:1.29-beta
     restart: always
     ports:
-    - "4466:4466"
+      - '4466:4466'
     environment:
       PRISMA_CONFIG: |
         port: 4466
