--- a/server/src/.graphqlconfig.yml
+++ b/server/src/.graphqlconfig.yml
@@ -2,4 +2,5 @@ projects:
   prisma:
     schemaPath: generated/prisma.graphql
     extensions:
+      default: 'http://192.168.1.125:4466'
       prisma: prisma/prisma.yml
