--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
     "react-card-flip": "^0.5.0",
+    "react-date-picker": "^7.3.0",
     "react-dom": "^16.8.4",
+    "react-hookstore": "^1.2.0",
     "react-icons": "^3.4.0",
     "react-loading-components": "^1.1.12",
     "react-media": "^1.9.2",
@@ -24,7 +26,6 @@
     "react-scroll-into-view": "^1.5.0",
     "react-snap": "^1.23.0",
     "react-star-ratings": "^2.3.0",
-    "react-time-picker": "^3.3.0",
     "styled-components": "^4.1.3",
     "styled-tools": "^1.7.1",
     "unstated": "^2.1.1",
