--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "apollo-server": "^2.4.8",
     "bcryptjs": "2.4.3",
+    "date-fns": "^1.30.1",
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.5.0",
