--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
