--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.5.0",
+    "moment": "^2.24.0",
     "prisma-client-lib": "1.28.0"
   },
   "devDependencies": {
