--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.5.0",
     "moment": "^2.24.0",
+    "node-cron": "^2.0.3",
     "prisma-client-lib": "1.28.0"
   },
   "devDependencies": {
