Made lots of changes. Can now book sessions.

--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -5,8 +5,9 @@ datamodel:
   - game.graphql
   - gamingsession.graphql
   - sessionreview.graphql
-  - individualgamingsession.graphql
+  - gamingtimeslot.graphql
   - enums.graphql
+  - booking.graphql
 
 generate:
   - generator: javascript-client
