--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.3.1",
+    "apollo-link-persisted-queries": "^0.2.2",
     "date-fns": "^1.30.1",
     "formik": "^1.5.1",
     "graphql": "^14.1.1",
