--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,9 @@
     "react-dom": "^16.8.4",
     "react-hookstore": "^1.2.0",
     "react-icons": "^3.4.0",
-    "react-loading-components": "^1.1.12",
+    "react-loading": "^2.0.3",
     "react-media": "^1.9.2",
+    "react-responsive": "^6.1.1",
     "react-router-dom": "4.3.1",
     "react-router-last-location": "^2.0.0-beta.1",
     "react-scripts": "2.1.5",
