--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "apollo-server": "^2.4.8",
     "bcryptjs": "2.4.3",
+    "cloudinary": "^1.14.0",
     "date-fns": "^1.30.1",
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.4",
@@ -15,7 +16,8 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-cron": "^2.0.3",
-    "prisma-client-lib": "1.28.0"
+    "prisma-client-lib": "1.28.0",
+    "promise-all": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "6.2.0",
