--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "rc-time-picker": "^3.6.4",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
