--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "moment": "^2.24.0",
     "node-cron": "^2.0.3",
     "prisma-client-lib": "1.28.0",
-    "promise-all": "^1.0.0"
+    "promise-all": "^1.0.0",
+    "prisma": "1.28.0"
   },
   "devDependencies": {
     "dotenv": "6.2.0",
-    "nodemon": "1.18.10",
-    "prisma": "1.28.0"
+    "nodemon": "1.18.10"
   }
 }
