--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.3.1",
+    "apollo-link-context": "^1.0.17",
     "apollo-link-persisted-queries": "^0.2.2",
     "apollo-upload-client": "^10.0.0",
     "cloudinary-react": "^1.1.0",
