--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-scroll-into-view": "^1.5.0",
     "react-snap": "^1.23.0",
     "react-star-ratings": "^2.3.0",
+    "react-stripe-elements": "^3.0.0",
     "styled-components": "^4.1.3",
     "styled-tools": "^1.7.1",
     "unstated": "^2.1.1",
