--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.4.8",
+    "axios": "^0.18.0",
     "bcryptjs": "2.4.3",
     "cloudinary": "^1.14.0",
     "date-fns": "^1.30.1",
@@ -16,9 +17,10 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-cron": "^2.0.3",
+    "prisma": "1.30",
     "prisma-client-lib": "1.28.0",
     "promise-all": "^1.0.0",
-    "prisma": "1.30"
+    "stripe": "^6.34.0"
   },
   "devDependencies": {
     "dotenv": "6.2.0",
