--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
+    "mixpanel-browser": "^2.28.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "rc-time-picker": "^3.6.4",
