--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.5.0",
     "lodash": "^4.17.11",
+    "luxon": "^1.15.0",
     "moment": "^2.24.0",
     "node-cron": "^2.0.3",
     "prisma": "1.30",
