--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "2.4.3",
     "cloudinary": "^1.14.0",
     "date-fns": "^1.30.1",
+    "date-fns-timezone": "^0.1.4",
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.5.0",
