--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.11",
     "luxon": "^1.15.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "node-cron": "^2.0.3",
     "prisma": "1.30",
     "prisma-client-lib": "1.28.0",
