--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/browser": "^5.3.0",
     "apollo-boost": "^0.3.1",
     "apollo-link-context": "^1.0.17",
     "apollo-link-persisted-queries": "^0.2.2",
@@ -36,6 +37,7 @@
     "react-snap": "^1.23.0",
     "react-star-ratings": "^2.3.0",
     "react-stripe-elements": "^3.0.0",
+    "slack": "^11.0.2",
     "styled-components": "^4.1.3",
     "styled-tools": "^1.7.1",
     "unstated": "^2.1.1",
