--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "gamerize_server",
-  "scripts": {
-    "start": "nodemon -e js,graphql -x node -r dotenv/config src/index.js",
-    "debug": "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
-    "nodemon": "nodemon"
-  },
+  "name": "gamerize",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "apollo-server": "^2.4.8",
-    "axios": "^0.18.0",
-    "bcryptjs": "2.4.3",
-    "cloudinary": "^1.14.0",
-    "date-fns": "^1.30.1",
-    "date-fns-timezone": "^0.1.4",
-    "graphql-import": "^0.7.1",
-    "graphql-yoga": "^1.17.4",
-    "jsonwebtoken": "8.5.0",
-    "lodash": "^4.17.11",
-    "luxon": "^1.15.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.25",
-    "node-cron": "^2.0.3",
-    "prisma": "1.30",
-    "prisma-client-lib": "1.28.0",
-    "promise-all": "^1.0.0",
-    "qs": "^6.7.0",
-    "stripe": "^6.34.0"
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.9",
+    "apollo-link-context": "^1.0.15",
+    "apollo-link-error": "^1.1.8",
+    "apollo-link-http": "^1.5.12",
+    "concurrently": "^4.1.0",
+    "graphql": "^14.1.1"
   },
-  "devDependencies": {
-    "dotenv": "6.2.0",
-    "nodemon": "1.18.10"
-  }
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"cd client && npm start\" \"cd server && npm start\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@gitlab.com/quinn_gamerize/gamerize.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/quinn_gamerize/gamerize/issues"
+  },
+  "homepage": "https://gitlab.com/quinn_gamerize/gamerize#readme"
 }
