--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-card-flip": "^0.5.0",
     "react-date-picker": "^7.3.0",
     "react-dom": "^16.8.4",
+    "react-helmet": "^5.2.1",
     "react-hookstore": "^1.2.0",
     "react-icons": "^3.4.0",
     "react-loading": "^2.0.3",
