--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gamerize_server",
   "scripts": {
-    "start": "nodemon -e js,graphql -x node -r dotenv/config src/index.js",
-    "debug": "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
+    "start": "DOTENV_CONFIG_PATH=.env.local nodemon -e js,graphql -x node -r dotenv/config src/index.js",
+    "debug": "DOTENV_CONFIG_PATH=.env.local nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
     "nodemon": "nodemon"
   },
   "dependencies": {
