--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-router-last-location": "^2.0.0-beta.1",
     "react-scripts": "2.1.5",
     "react-scroll-into-view": "^1.5.0",
+    "react-select": "^3.0.4",
     "react-snap": "^1.23.0",
     "react-star-ratings": "^2.3.0",
     "react-stripe-elements": "^3.0.0",
