--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,6 @@
     "react-media": "^1.9.2",
     "react-responsive": "^6.1.1",
     "react-router-dom": "4.3.1",
-    "react-router-last-location": "^2.0.0-beta.1",
     "react-scripts": "2.1.5",
     "react-scroll-into-view": "^1.5.0",
     "react-select": "^3.0.4",
@@ -40,6 +39,7 @@
     "react-star-ratings": "^2.3.0",
     "react-stripe-elements": "^3.0.0",
     "slack": "^11.0.2",
+    "source-map-explorer": "^2.0.1",
     "styled-components": "^4.1.3",
     "styled-tools": "^1.7.1",
     "unstated": "^2.1.1",
@@ -47,6 +47,7 @@
     "yup": "^0.26.10"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
