--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-media": "^1.9.2",
     "react-responsive": "^6.1.1",
     "react-router-dom": "4.3.1",
+    "react-router-last-location": "^2.0.0-beta.3",
     "react-scripts": "2.1.5",
     "react-scroll-into-view": "^1.5.0",
     "react-select": "^3.0.4",
