--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "2.4.3",
     "cloudinary": "^1.14.0",
+    "crypto": "^1.0.1",
     "date-fns": "^1.30.1",
     "date-fns-timezone": "^0.1.4",
     "graphql-import": "^0.7.1",
@@ -20,6 +21,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
     "node-cron": "^2.0.3",
+    "nodemailer": "^6.2.1",
     "prisma": "1.30",
     "prisma-client-lib": "1.28.0",
     "promise-all": "^1.0.0",
@@ -27,7 +29,7 @@
     "stripe": "^6.34.0"
   },
   "devDependencies": {
-    "dotenv": "6.2.0",
+    "dotenv": "^6.2.0",
     "nodemon": "1.18.10"
   }
 }
