--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "apollo-server": "^2.4.8",
+    "async-lock": "^1.2.0",
     "axios": "^0.18.0",
     "bcryptjs": "2.4.3",
     "cloudinary": "^1.14.0",
     "crypto": "^1.0.1",
     "date-fns": "^1.30.1",
-    "dotenv": "^6.2.0",
     "date-fns-timezone": "^0.1.4",
+    "dotenv": "^6.2.0",
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.5.0",
