--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@sentry/browser": "^5.3.0",
     "apollo-boost": "^0.3.1",
+    "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.17",
     "apollo-link-persisted-queries": "^0.2.2",
+    "apollo-link-ws": "^1.0.18",
     "apollo-upload-client": "^10.0.0",
+    "apollo-utilities": "^1.3.2",
     "cloudinary-react": "^1.1.0",
     "date-fns": "^1.30.1",
     "formik": "^1.5.7",
@@ -43,6 +46,7 @@
     "source-map-explorer": "^2.0.1",
     "styled-components": "^4.1.3",
     "styled-tools": "^1.7.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "unstated": "^2.1.1",
     "unstated-debug": "^0.3.2",
     "yup": "^0.26.10"
